# ChatAgentSystem

./: .env  .env.example  .gitignore  Chat_Agent_Framework_README.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  core.py  executor.py  loop.py
app/agent/tools/: __init__.py  discovery.py  register.py
app/agent/tools/internal/: __init__.py  calculator.py  datetime_tool.py  python_executor.py  search.py  todo_tool.py
app/api/: __init__.py  chat.py  session.py  todo.py
app/database/: __init__.py  engine.py  models.py  repository.py  todo_repository.py
app/memory/: __init__.py  compressor.py  context.py  manager.py
app/messaging/: __init__.py  pipeline.py  queue.py
app/models/: schemas.py
app/sandbox/: __init__.py  executor.py  manager.py  models.py  security.py
app/services/: __init__.py  agent_service.py  todo_service.py
app/utils/: __init__.py  token_counter.py
sandbox/: Dockerfile  requirements.txt
